<resources>

    <string name="app_name">EarSensei</string>

    <!-- Start -->
    <string name="intervals">Interwały</string>
    <string name="perfect_pitch">Słuch absolutny</string>
    <string name="scales">Skale</string>
    <string name="chords">Akordy</string>
    <string name="music_theory">Teoria muzyki</string>
    <string name="profile">Profil</string>
    <string name="settings">Ustawienia</string>

    <!-- Navigation buttons -->
    <string name="next">Dalej</string>
    <string name="previous">Cofnij</string>

    <!--intervals-->
    <string name="interval_perfect1st">Pryma</string>
    <string name="interval_minor2nd">Sekunda mała</string>
    <string name="interval_major2nd">Sekunda wielka</string>
    <string name="interval_minor3rd">Tercja mała</string>
    <string name="interval_major3rd">Tercja wielka</string>
    <string name="interval_perfect4th">Kwarta</string>
    <string name="interval_tritone">Tryton</string>
    <string name="interval_perfect5th">Kwinta</string>
    <string name="interval_minor6th">Seksta mała</string>
    <string name="interval_major6th">Seksta wielka</string>
    <string name="interval_minor7th">Septyma mała</string>
    <string name="interval_major7th">Septyma wielka</string>
    <string name="interval_octave">Oktawa</string>
    <string name="interval_minor9th">Nona mała</string>
    <string name="interval_major9th">Nona wielka</string>

    <!--scales-->
    <string name="scale_major">Durowa</string>
    <string name="scale_pentatonic_major">Pentatonika Durowa</string>
    <string name="scale_blues_major">Bluesowa durowa</string>
    <string name="scale_natural_minor">Naturalna Molowa</string>
    <string name="scale_melodic_minor">Melodyczna Molowa</string>
    <string name="scale_harmonic_minor">Harmoniczna Molowa</string>
    <string name="scale_pentatonic_minor">Pentatonika Molowa</string>
    <string name="scale_blues_minor">Bluesowa Molowa</string>

    <!--chords-->
    <string name="chord_major">Durowy</string>
    <string name="chord_minor">Molowy</string>
    <string name="chord_diminished">Zmniejszony</string>
    <string name="chord_augmented">Zwiększony</string>
    <string name="chord_major7th">Durowy z septymą wielką</string>
    <string name="chord_dominant7th">Dominanta septymowa</string>
    <string name="chord_minor7th">Molowy z septymą małą</string>

    <!--perfect pitch-->>
    <string name="C">C</string>
    <string name="Cis">Cis</string>
    <string name="D">D</string>
    <string name="Dis">Dis</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="Fis">F</string>
    <string name="G">G</string>
    <string name="Gis">Gis</string>
    <string name="A">A</string>
    <string name="Ais">Ais</string>
    <string name="B">B</string>

    <!--music theory-->
    <string name="basics">Podstawy</string>
    <string name="music_theory_basics">basics description placeholder</string>

    <string name="music_theory_intervals">\t\tInterwały stanowią jeden z podstawowych elementów muzyki i są niezbędne do zrozumienia harmonii i melodii. Każdy interwał posiada swoją nazwę, która opisuje jego charakterystykę. Na przykład, kwarta oznacza interwał składający się z czterech stopni skali, a oktawa oznacza interwał, w którym dwa dźwięki różnią się wysokością o osiem stopni skali.
\n\n\t\tOdległość między interwałami jest mierzona w półtonach. Półton jest najmniejszą jednostką dźwiękową w muzyce zachodniej. Przesunięcie dźwięku o jeden półton zmienia jego wysokość o stałą wartość, niezależnie od wysokości startowej dźwięku. Na przykład, przesunięcie dźwięku C o jeden półton w górę da nam dźwięk Cis, a przesunięcie dźwięku C o jeden półton w dół da nam dźwięk B.
\n\n\t\tInterwały, ich nazwy i odległości między nimi na skali diatonicznej stanowią podstawę dla harmonii i melodyki. Zrozumienie tych pojęć jest niezbędne dla każdego muzyka i umożliwia lepsze zrozumienie struktury utworów, co pozwala na tworzenie własnych kompozycji, aranżacje oraz improwizacje.</string>

    <string name="music_theory_chords">\t\tAkord to współbrzmienie co najmniej trzech dźwięków. Akordy stanowią ważny element w tworzeniu muzyki, ponieważ pozwalają na tworzenie różnorodnych i bogatych brzmień.
\n\n\t\t\Durowe i molowe akordy różnią się interwałami, z których się składają. Durowe akordy oparte są na tercjach wielkich, co nadaje im jasne, wesołe brzmienie, a molowe oparte są na tercjach małych, co daje smutne, melancholijne brzmienie. Istnieje wiele innych rodzajów akordów, takich jak sus2, sus4, add9, czy septymowe, które dodają do dźwięku dodatkowe interwały, co powoduje różnorodne efekty brzmieniowe.
\n\n\t\tAkordy często stosuje się jako podstawę harmonii w utworach muzycznych. Poprawne ich użycie może nadać muzyce bogate brzmienie, a złe ich wykorzystanie może doprowadzić do nieharmonijności, co odbije się negatywnie na odbiorze utworu.</string>

    <string name="music_theory_scales">\t\tSkala to zbiór dźwięków ułożonych według określonego schematu interwałów. W muzyce istnieje wiele rodzajów skal, ale najczęściej używane są skale diatoniczne, składające się z siedmiu dźwięków ułożonych w określonych interwałach. Gama, z kolei, to skala zaczynająca się od konkretnego dźwięku.
\n\n\t\tSkala diatoniczna może być utworzona na podstawie dowolnego dźwięku, ale najczęściej używa się gam C-dur i a-moll. Gama C-dur składa się z dźwięków C, D, E, F, G, A, B i ich oktaw, a interwały między nimi to: ton, ton, półton, ton, ton, ton, półton. Natomiast gama a-moll składa się z dźwięków A, B, C, D, E, F, G i ich oktaw, a interwały między nimi to: ton, półton, ton, ton, półton, ton, ton. Zestawy dźwięków w określonych skalach (np. durowej) mogą się różnić, ale interwały między nimi pozostają zawsze niezmienne.
\n\n\t\tMimo że gama i skala mają pewne różnice, to są to jednak pojęcia bardzo bliskie sobie. Gama określa skale, która zaczyna się od określonego dźwięku, co pozwala na łatwiejsze rozróżnienie między nimi. Oba pojęcia są kluczowe w teorii muzyki i stanowią podstawę dla tworzenia melodii, harmonii i akordów.</string>
    <string name="interval_name">Nazwa interwału</string>
    <string name="semitones_number">Liczba półtonów</string>
    <string name="chord_name">Nazwa akordu</string>
    <string name="scale_name">Nazwa skali</string>

    <!--snackbar-->
    <string name="unlocked_question">Odblokowano pytanie: </string>

    <string name="is_null">is null</string>

    <string-array name="quantity_array">
        <item>All</item>
        <item>200</item>
        <item>100</item>
        <item>50</item>
        <item>20</item>
        <item>10</item>
    </string-array>

</resources>