<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_theory_chords" />

            <TableLayout
                android:layout_margin="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0.5">

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_name"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/intervals"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_major"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="0, 4, 7"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_minor"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="0, 3, 7"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_diminished"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="0, 3, 6"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_augmented"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="0, 4, 8"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_major7th"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="0, 4, 7, 11"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_dominant7th"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="0, 4, 7, 10"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/chord_minor7th"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                    <TextView
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="0, 3, 7, 10"
                        android:textAlignment="center"
                        android:background="@drawable/border" />

                </TableRow>


            </TableLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>